# capd_utils

./: .gitmodules  CMakeLists.txt
capd_utils/: affine_map.hpp  arctan2_map.hpp  c1_map.hpp  composite_map.hpp  concat.hpp  constrained_function.hpp  covering_factors.hpp  direct_sum.hpp  eigenpair.hpp  eigenproblem.hpp  eigenproblem.searcher.hpp  enp_map.hpp  extension_map.hpp  extract.hpp  fixed_point_condition.hpp  gauss.hpp  ggs.hpp  grid_map.hpp  householder_generator.hpp  householder_generator2.hpp  identity_map.hpp  idx_list.hpp  image_sum.hpp  krawczyk_method.expander.hpp  lambda_map.hpp  local_coordinate_system.hpp  local_map.base.hpp  local_map.hpp  local_poincare_wrapper.hpp  local_timemap_wrapper.hpp  map_base.hpp  map_compatibility.hpp  number_string_info.cpp  number_string_info.hpp  number_string_utilities.cpp  number_string_utilities.hpp  pi.hpp  pne_map.hpp  poincare_wrapper.hpp  polar_coordinates.hpp  (+12 more)
capd_utils/capd/: basic_tools.hpp  basic_tools.internal.hpp  basic_types.hpp  c0rect2set.hpp  c1rect2set.hpp  fenv_rounding.hpp  gauss_solver.hpp  inst.cpp  map.cpp  map.hpp  norm.hpp  ode_solver.cpp  ode_solver.hpp  poincare_map.cpp  poincare_map.hpp  section.hpp  solution_curve.hpp  timemap.cpp  timemap.hpp
capd_utils/newton_method/: newton_method.hpp  newton_method.multisearcher.hpp  newton_method.root.hpp  newton_method.roots_list.hpp
capd_utils/parallel_shooting/: cpsm.hpp  ecpsm.hpp  epsm.hpp  epsmr.hpp  parallel_shooting.hpp  parallel_shooting_init.hpp  psm.hpp  single_shooting.hpp
carina/: affine_map.hpp  arctan2_map.hpp  c1_map.hpp  composite_map.hpp  constrained_function.hpp  eigenproblem.hpp  eigenproblem.searcher.hpp  enp_map.hpp  extension_map.hpp  gauss.hpp  ggs.hpp  grid_map.hpp  householder_generator.hpp  householder_generator2.hpp  idx_list.hpp  image_sum.hpp  lambda_map.hpp  local_coordinate_system.hpp  local_map.base.hpp  local_poincare_wrapper.hpp  local_timemap_wrapper.hpp  map_compatibility.hpp  number_string_info.cpp  number_string_info.hpp  number_string_utilities.cpp  number_string_utilities.hpp  pne_map.hpp  polar_coordinates.hpp  readable_memory.hpp  readable_mpreal.hpp  readable_scalar.hpp  scalar_parser.hpp  timemap_wrapper_extended.hpp  type_adapter_map.hpp  type_cast.internal.hpp
carina/capd/: basic_tools.hpp  basic_tools.internal.hpp  map.cpp  norm.hpp  poincare_map.cpp  timemap.cpp
carina/newton_method/: newton_method.hpp
carina/parallel_shooting/: cpsm.hpp  ecpsm.hpp  epsm.hpp  epsmr.hpp  parallel_shooting.hpp  parallel_shooting_init.hpp  psm.hpp  single_shooting.hpp
carina/untested/: absolute_map.hpp  constant_map.hpp  coordsys_move.hpp  inverse_map.hpp  point_section_relation.hpp  shift_map.hpp  signum_map.hpp  subtraction.hpp
